D3.b actually complete, had to add flyweight

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
           <button id="south" title="south">⬇️</button>
           <button id="west" title="west">⬅️</button>
           <button id="east" title="east">➡️</button>
-          <button id="reset" title="reset">🔄</button>
+          <button id="reset" title="reset">🚮</button>
+          <button id="toggleGeolocation">🌐</button>
         </section>
         <section id="statusPanel">
           <span>Player Coins: <strong>0</strong></span>
